fixed centering text error

--- a/module3-assignment/index.html
+++ b/module3-assignment/index.html
@@ -31,13 +31,13 @@
         <div id="collapsable-nav" class="collapse navbar-collapse">
           <ul id="nav-list" class="nav navbar-nav hidden-sm hidden-md hidden-lg">
             <li>
-              <a href="menu-categories.html">Chicken</a>
+              <a href="menu-categories.html" class="text-center">Chicken</a>
             </li>
             <li>
-              <a href="menu-categories.html">Beef</a>
+              <a href="menu-categories.html" class="text-center">Beef</a>
             </li>
             <li>
-              <a href="menu-categories.html">Sushi</a>
+              <a href="menu-categories.html" class="text-center">Sushi</a>
             </li>
          </ul>
        </div>
