--- a/module3-assignment/index.html
+++ b/module3-assignment/index.html
@@ -47,7 +47,7 @@
 
   <div id="main-content" class="container">
     <h1 class="text-center">Our Menu</h1>
-    <div class="container-float section-container">
+    <div class="container-fluid section-container">
         <div id="chicken" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <h2 class="text-center">Chicken</div>
         Tho' much is taken, much abides; and tho' 
