Remove spurious media break classes

--- a/module3-assignment/index.html
+++ b/module3-assignment/index.html
@@ -48,7 +48,7 @@
   <div id="main-content" class="container-fluid">
     <h1 class="text-center">Our Menu</h1>
     <div class="section-container">
-        <div id="chicken" class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <div id="chicken" class="col-xs-12">
             <h2 class="text-center">Chicken</div>
         Tho' much is taken, much abides; and tho' 
         We are not now that strength which in old days 
